--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <body>
     <h1>this website is desigined to take you to bmw's site throught a button</h1>
      <a href="https://www.bmw.gr/el/index.html" target="new"> 
-      <button style="
-        background-color:black ;
-        color: white ;">          
+      <button 
+        style="background-color:black ;
+                color: white ;
+                font-size: larger;">          
         Visit BMW Greece 
       </button> </a>
 
